--- a/Scripts/administrator/servers.cfg
+++ b/Scripts/administrator/servers.cfg
@@ -2,13 +2,35 @@
 username=guido
 ip=10.0.0.253
 port=22
+groups=production
 
 [sam01]
 username=guido
 ip=10.0.0.20
 port=40022
+groups=production
 
 [aragorn01]
 username=guido
 ip=10.0.0.91
 port=22
+groups=production
+
+[yoda01]
+username=guido
+ip=10.0.1.101
+port=22
+groups=staging
+
+[walt]
+username=guido
+ip=10.0.2.10
+port=22
+groups=devel
+
+[jesse]
+username=guido
+ip=10.0.2.20
+port=22
+groups=devel
+
